<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">EMove</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="left_error_tip">Nothing ahead!</string>
    <string name="right_error_tip">Please wait patiently, tomorrow will come!</string>
    <string name="action_menu_share">share</string>
    <string name="share_success">share success</string>
    <string name="share_fail">share failed</string>
    <string name="today">today</string>
    <string name="weibosdk_demo_toast_auth_success">authorization success</string>
    <string name="weibosdk_demo_toast_auth_failed">authorization failed</string>
    <string name="weibosdk_demo_toast_auth_canceled">authorization cancle</string>
    <string name="weibosdk_demo_toast_obtain_code_failed">failed to get Code</string>
    <string name="action_get_data">receive the running data</string>
    <string name="action_get_persion_config">synchronize personal information</string>
    <string name="loading_data">Receiving the remote data, please wait!</string>
    <string name="connect_time_out">Connecting to a remote device timeout!</string>
    <string name="get_complete">Data sync done!</string>
    <string name="calories">calorie</string>
    <string name="steps">step</string>
    <string name="pm2_5">air quality</string>
    <string name="serious_pollution">Serious Pollution</string>
    <string name="serious_pollution_in">Hey, the air is too bad to say anything&#8230;</string>
    <string name="middle_pollution">Moderately Pollution</string>
    <string name="middle_pollution_in">Bad air quality, strongly suggest wearing a respirator.</string>
    <string name="slightly_pollution">Light Pollution</string>
    <string name="slightly_pollution_in">generally air quality, suggest exercising indoors.</string>
    <string name="fine">Good</string>
    <string name="fine_in">Air is good for outdoor exercise.</string>
    <string name="excellent">Excellent</string>
    <string name="excellent_in">Nice air quality, call on friends to play outdoor.</string>
    <string name="no_pm2_5">There is no air data today, have a look out the window.</string>
    <string name="burn_calories">burn calories</string>
    <string name="unit_calories">kCal</string>
    <string name="run_duration">exercise time</string>
    <string name="run_unit"> min</string>
    <string name="run_steps">movement steps</string>
    <string name="shortcut_title">Whether to create a desktop shortcut?</string>
    <string name="shortcut_msg">Some models launcher does not support the creation of desktop shortcuts, may make it impossible to create.</string>
    <string name="shortcut_msg2">Whether the prompt is displayed each time you start?</string>
    <string name="creat">creat</string>
    <string name="cancle">cancle</string>
    <string name="shortcut_exsited">Shortcut already exists.</string>
    <string name="input_name">please enter your username</string>
    <string name="daliy_exercise">Daily exercise</string>
    <string name="step">steps</string>
    <string name="best_value">Personal bests</string>
    <string name="day">days</string>
    <string name="get_goals">Continuous goals</string>
    <string name="less_2000">2000 steps or less</string>
    <string name="less_4000">2000&#8211;4000 steps</string>
    <string name="less_7000">4000&#8211;7000 steps</string>
    <string name="less_9000">7000&#8211;9000 steps</string>
    <string name="more_9000">9000 steps or more</string>
    <string name="persion_config">Personal information</string>
    <string name="persion_goal">Personal goal</string>
    <string name="calculate_exercise">Calculate the amount of exercise</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="pre">previous</string>
    <string name="next">next</string>
    <string name="done">end</string>
    <string name="set_exercise">set the amount of exercise every day trying to achieve</string>
    <string name="general">ordinary</string>
    <string name="activists">activist</string>
    <string name="madman">maniac</string>
    <string name="step_spe">(Step)</string>
    <string name="calories_spe">(Cal)</string>
    <string name="save">save</string>
    <string name="kcal">kCal</string>
    <string name="share_show">You have done quite well to show off!</string>
    <string name="share_input">please enter publish content</string>
    <string name="check_network">Please check your network settings.</string>
    <string name="walk">walk</string>
    <string name="kilometre">kilometers</string>
    <string name="goals">goal:</string>
    <string name="weibo_login">Weibo Login</string>
    <string name="share_mistake">There is a blank in pictures or text.</string>
    <string name="rice">bowl of rice</string>
    <string name="chocolate">gram of chocolate</string>
    <string name="ice_cream">ice cream</string>
    <string name="fat">gram of fat</string>
    <string name="cake">piece of cake</string>
    <string name="milk_tea">cup of milk tea</string>
    <string name="hamburger">hamburger</string>
    <string name="large_fries">bag of large fries</string>
    <string name="syncs_persion_setting">sync personal settings</string>
    <string name="syncs_persion_setting_message">The personal information is different between the device and phone, please select to upload or download.</string>    
    <string name="upload">upload</string>
    <string name="download">download</string>
    <string name="install_weixin">Please install WeChat.</string>
    <string name="weixin_no_support">The WeChat you have installed does not support this feature.</string>
    <string name="weixin_no_support_quan">The WeChat you have installed dose not support sharing to Moments, please update to 4.2 or later.</string>
    <string name="install_qq">Please install QQ.</string>
    <string name="select_platform">Please select a platform.</string>
    <string name="least_step">Steps can not be less than 5000.</string>
    <string name="least_cal">Not less than 200 calories.</string>
    <string name="least_step_cal">Steps can not be less than 5000, and not less than 200 calories.</string>
    <string name="know">OK</string>
    <string name="guide_step_1">(1/5) Select Sex</string>
    <string name="guide_step_2">(2/5) Select Weight</string>
    <string name="guide_step_3">(3/5) Select Height</string>
    <string name="guide_step_4">(4/5) Select the date of birth</string>
    <string name="guide_step_5">(5/5) Select goal</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="modify">modify</string>
    <string name="one_day_most_step">Most daily steps</string>
    <string name="one_day_avg_step">Average daily steps</string>
    <string name="one_day_most_cal">Most daily consumption</string>
    <string name="one_day_avg_cal">Average daily consumption</string>
    <string name="total_walk">Total walk</string>
    <string name="total_cal">Total calories</string>
    <string name="motion_goal">GOAL</string>
    <string name="achieve_goal">achieved</string>
    <string name="completion_rate">completed</string>
    <string name="bmi">BMI</string>
    <string name="bmi_intro">BMI is body mass index, the smaller the value, the thinner body</string>
    <string name="bmr_describe">The daily burned caloric</string>
    <string name="bmr_intro">Basal metabolism is the energy the body will consume daily even you do nothing</string>
    <string name="unit_age"></string>
    <string name="unit_length">cm</string>
    <string name="unit_weight">kg</string>
    <string name="help_lose_weight">EMove lose your weight</string>
    <string name="weight_trend">view the full trends in weight</string>
    <string name="describe_total_step_1">You just hit the road</string>
    <string name="describe_total_step_2">More than the height of mount Everest</string>
    <string name="describe_total_step_3">Over the span of the bridge across hangzhou bay</string>
    <string name="describe_total_step_4">More than the total length of the fourth ring road in Beijing</string>
    <string name="describe_total_step_5">More than the length of the hiking route in Motuo</string>
    <string name="describe_total_step_6">More than the distance from senkaku to China</string>
    <string name="describe_total_step_7">More than the length of the Seine</string>
    <string name="describe_total_step_8">More than the distance from Beijing to Shanghai</string>
    <string name="describe_total_step_9">More than the length of the qinghai-tibet railway</string>
    <string name="equal_to">Equal to</string>
    <string name="beer">jug of beer</string>
    <string name="duck">roast duck</string>
    <string name="Ferrari">For a Ferrari F430 driving</string>
    <string name="minute">minute</string>
    <string name="family_of_three">For a family of three living</string>
    <string name="elephant">elephant</string>
    <string name="airplane_747">For  Boeing 747 flying</string>
    <string name="no_cal">Equal to zero ice cream</string>
    <string name="bm1_describe_1">be a little stronger</string>
    <string name="bm1_describe_2">well, please keep</string>
    <string name="bm1_describe_3">the strong man</string>
    <string name="bm1_describe_4">control your weight</string>
    <string name="bm1_describe_5">as light as a feather</string>
    <string name="bm1_describe_6">keep good stature</string>
    <string name="bm1_describe_7">neat figure</string>
    <string name="my_ranking">My ranking</string>
    <string name="data_center">Data center</string>
    <string name="fitness_plan">Fitness plan</string>
    <string name="sports_music">Sports music</string>
    <string name="sports_photo">Sports photo</string>
    <string name="sedentary_remind">Sedentary remind</string>
    <string name="syncs_with_device">Sync data</string>
    <string name="cloud_syncs">Cloud syncs</string>
    <string name="login_before_lookup">See related information please login first</string>
</resources>