<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/top_left"
        android:layout_width="80dip"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/timeline_vertical_line"
            android:layout_width="2.0dip"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/time_logo"
            android:layout_centerHorizontal="true"
            android:background="@drawable/day_timeline_vertical_line"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/time_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/time_logo" >
        </ImageView>
    </RelativeLayout>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/top_left"
        android:layout_alignTop="@id/top_left"
        android:layout_toRightOf="@id/top_left"
        android:singleLine="true"
        android:paddingTop="6dip"
        android:text="18:59 - 20:49"
        android:textColor="@color/dark_grey"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/gap_h_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_left"
        android:background="@drawable/table_split_line"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="115dip"
        android:layout_below="@id/top_left"
        android:paddingTop="1px" >

        <RelativeLayout
            android:id="@+id/bottom_left"
            android:layout_width="80dip"
            android:layout_height="match_parent" >

            <ImageView
                android:layout_width="2.0dip"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@drawable/day_timeline_vertical_line"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativelayout_card"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:paddingBottom="15.0dip"
            android:paddingLeft="15.0dip"
            android:layout_marginTop="3dip"
             >

            <ImageView
                android:id="@+id/item_run_logo"
                android:layout_width="48.0dip"
                android:layout_height="48.0dip"
                android:contentDescription="@string/app_name"
                android:scaleType="center"
                android:src="@drawable/item_run_logo" >
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15.0dip"
                android:layout_toRightOf="@id/item_run_logo"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/steps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="@color/dark_grey"
                        android:textSize="40sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/run_steps"
                        android:textColor="@color/light_grey"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textColor="@color/dark_grey"
                            android:textSize="40sp" />

                        <TextView
                            android:id="@+id/run_unit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/run_unit"
                            android:textColor="@color/dark_grey"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/run_duration"
                        android:textColor="@color/light_grey"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/calo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textColor="@color/dark_grey"
                            android:textSize="40sp" />

                        <TextView
                            android:id="@+id/unit_calories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/unit_calories"
                            android:textColor="@color/dark_grey"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/burn_calories"
                        android:textColor="@color/light_grey"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:id="@+id/gap_h_line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dip"
            android:background="@drawable/table_split_line"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

</RelativeLayout>