<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:layout_width="@dimen/divider_with"
        android:layout_height="match_parent"
        android:background="@color/sports_left" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/gap_h_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:paddingTop="1px" >

            <RelativeLayout
                android:id="@+id/bottom_left"
                android:layout_width="80dip"
                android:layout_height="match_parent" >

                <ImageView
                    android:layout_width="2.0dip"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/day_timeline_vertical_line"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativelayout_card"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:paddingBottom="15.0dip"
                android:paddingLeft="15.0dip" >

                <ImageView
                    android:id="@+id/item_run_logo"
                    android:layout_width="48.0dip"
                    android:layout_height="48.0dip"
                    android:contentDescription="@string/app_name"
                    android:scaleType="center"
                    android:src="@drawable/icon_step" >
                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="15.0dip"
                    android:layout_toRightOf="@id/item_run_logo"
                    android:baselineAligned="false"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/duration"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:textColor="@color/dark_grey"
                                android:textSize="@dimen/text_30" />

                            <TextView
                                android:id="@+id/run_unit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/run_unit"
                                android:textColor="@color/dark_grey"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/run_duration"
                            android:textColor="@color/light_grey"
                            android:textSize="@dimen/text_16" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/calories"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:textColor="@color/dark_grey"
                                android:textSize="@dimen/text_30" />

                            <TextView
                                android:id="@+id/unit_calories"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/unit_calories"
                                android:textColor="@color/dark_grey"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/calories"
                            android:textColor="@color/light_grey"
                            android:textSize="@dimen/text_16" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:singleLine="true"
                    android:text="18:59 - 20:49"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/text_15" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>